--- a/env/views/index.ejs
+++ b/env/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Project</title>
-<link rel="stylesheet" type="text/css" href="styles.css">
+ <link rel="stylesheet" href="css/styles.css">
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -32,7 +32,7 @@
 
     </div>
     <div class="w3-col s3">
-      <a href="/login" class="w3-button w3-block">Login/Signup</a>
+      <a href='/login' class="w3-button w3-block">Login/Signup</a>
     </div>
     <div class="w3-col s3">
       <a href="#" class="w3-button w3-block">About</a>
@@ -47,7 +47,7 @@
 <div class="w3-content" style="max-width:1100px;margin-top:80px;margin-bottom:80px">
 
   <div class="w3-panel">
-    <h1><b>WELCOME TO THE ONLINE LIBRARY(Or anything else)</b></h1>
+    <h1><b>Welcome to  Bookey</b></h1>
 
   </div>
 
