--- a/env/views/login.ejs
+++ b/env/views/login.ejs
@@ -1,18 +1,21 @@
 <h3>Please Login</h3>
-<!--  <form action="action_page.php" method="post"> -->
+<% if (messages.error) { %>
+  <%= messages.error %>
+<% } %>
+<link rel="stylesheet" href="css/styles.css">
 
-
-<label for="uname"><b>Username</b></label>
-<input type="text" placeholder="Enter Username" name="uname" required>
+<form action="/login" method="POST">
+<label for="email"><b>Username</b></label>
+<input type="text" placeholder="Enter Username" name="email" required>
 <br>
 
-<label for="psw"><b>Password</b></label>
-<input type="password" placeholder="Enter Password" name="psw"required>
+<label for="password"><b>Password</b></label>
+<input type="password" placeholder="Enter Password" name="password"required>
 
 <br>
 
 <button type="submit">Login</button>
-
+</form>
 <br>
 <label>
   <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -23,3 +26,5 @@
 
 
   <button type="button" class="cancelbtn">Cancel</button>
+
+  <!-- button type="submit">Log Out</button> -->
