--- a/env/views/register.ejs
+++ b/env/views/register.ejs
@@ -1,4 +1,5 @@
 <h1>Register</h1>
+<link rel="stylesheet" href="css/styles.css">
 
 <form action ="/register" method = POST>
     <p>Please eneter the following information.</p>
