--- a/client/src/components/club/club.css
+++ b/client/src/components/club/club.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
@@ -8,7 +9,7 @@ body {
   height: 40px;
   position: absolute;
   left: 20px;
-  top:15%;
+  top:10%;
 }
 
 
@@ -17,7 +18,7 @@ body {
   top: 0px;;
   height: 400px;;
   width: 600px;
-  left: 500px;
+  left: 0px;
 }
 
 .text{
@@ -65,10 +66,10 @@ input[type=submit] {
 
 .container11 {
   position: absolute;
-  top:600px;
-  left: 500px;
+  top:500px;
+  left: 400px;
   border-radius: 5px;
-  background-color: #e4dede;
+  background-color: #f2f2f2;
   padding: 20px;
 }
 
@@ -123,3 +124,9 @@ input[type=submit] {
   background-color: #4CAF50;
   color: black;
 }
+
+
+
+
+
+
