--- a/client/src/components/loggedIn/loggedIn.css
+++ b/client/src/components/loggedIn/loggedIn.css
@@ -1,159 +1,117 @@
-
 body {
 
-    margin: 0;
-  
-    font-family: 'Merriweather', serif;
-  
-     background-color: white;
-  
-  
-  }
+  margin: 0;
+
+  font-family: 'Merriweather', serif;
+
+   background-color: white;
+
+
+}
+
+
 
 .catagories {
-    position: absolute;
-    top: 400px;
-    right:800px ;
-    left: 50px;
-    border-color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 25%;
-    font-family: arial;
-  }
+  position: absolute;
+  top: 400px;
+  right:800px ;
+  left: 5%;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 25%;
+  font-family: arial;
+  text-align: center;
+}
+
+
+
+
+.adding {
+  position: absolute;
+  top: 400px;
+  left: 37%;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 25%;
+  font-family: arial;
+  text-align: center;
+}
+
+.image-container20{
+  position: absolute;
+  width: 20%;
+  height: 30%;
+  top: 10px;
+  right:100px ;
+  left: 100px;
+
+
+}
+.join {
+  position: absolute;
+  top: 400px;
   
-  
-  
-  
-  .adding {
-    position: absolute;
-    top: 400px;
-    right:600px ;
-    left: 450px;
-    border-color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 25%;
-    font-family: arial;
-  }
-  
-  .image-container{
-    position: absolute;
-    width: 20%;
-    height: 30%;
-    top: 10px;
-    right:100px ;
-    left: 100px;
-  
-  
-  }
-  .join {
-    position: absolute;
-    top: 400px;
-    right:500px ;
-    left: 850px;
-    border-color: black;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 25%;
-    font-family: arial;
-  
-  }
-  
-  
-  
-  .top-container{
-    background-color: #d8ac9c;
-    position: relative;
-    padding-top: 100px;
-    height: 400px;
-  }
-  
-  
-  
-  
-  .userWelcome{
-  font-family: Arial, Helvetica, Arial, sans-serif;
-  }
-  
-  .catalog {
-    position: absolute;
-    margin: auto;
-    width: 300px;
-    border: 15px solid black;
-    padding: 50px;
-    margin: 20px;
-  }
-  .navigationBar2{
-    background-color: #333;
-    overflow: hidden;
-  }
-  
-  
-  
-  
-  /* Style the links inside the navigation bar */
-  .navigationBar2 a {
-    float: left;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .navigationBar2 a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add a color to the active/current link */
-  .navigationBar2 a.active {
-    background-color: #4CAF50;
-    color: black;
-  }
-  .logout2{
-    position: absolute;
-    right: 58%;
-  }
-  
-  
-  
-  .dropbtn {
-    background-color: #4CAF50;
-    color: white;
-  
-  }
-  
-  /* The container <div> - needed to position the dropdown content */
-  .dropdown2 {
-    position: absolute;
-    display: inline-block;
-    right: 65%;
-  }
-  
-  /* Dropdown Content (Hidden by Default) */
-  .dropdown-content2 {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-  
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  /* Links inside the dropdown */
-  .dropdown-content2 a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color of dropdown links on hover */
-  .dropdown-content2 a:hover {background-color: #ddd;}
-  
-  /* Show the dropdown menu on hover */
-  .dropdown:hover .dropdown-content2 {display: block;}
-  
-  /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
-  
+  left: 70%;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 25%;
+  font-family: arial;
+  text-align: center;
+
+}
+
+
+
+.top-container20{
+  text-align: center;
+  background-color: #d8ac9c;
+  position: relative;
+  padding-top: 100px;
+  height: 400px;
+}
+
+
+
+
+.userWelcome{
+font-family: Arial, Helvetica, Arial, sans-serif;
+}
+
+.catalog {
+  position: absolute;
+  margin: auto;
+  width: 300px;
+  border: 15px solid black;
+  padding: 50px;
+  margin: 20px;
+}
+.navigationBar20{
+  background-color: #333;
+  overflow: hidden;
+}
+
+
+
+
+/* Style the links inside the navigation bar */
+.navigationBar20 a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navigationBar20 a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.navigationBar20 a.active {
+  background-color: #4CAF50;
+  color: black;
+}
+
