--- a/client/src/components/addBook/addBook.css
+++ b/client/src/components/addBook/addBook.css
@@ -76,3 +76,10 @@ input[type=submit]:hover {
   margin-top: 10%;
   text-align: center;
 }
+
+
+.LogoutLeft{
+  position: absolute;
+  right:2%;
+
+}
