--- a/client/src/components/club/club.css
+++ b/client/src/components/club/club.css
@@ -74,6 +74,16 @@ input[type=submit] {
 }
 
 
+.container22{
+  position: absolute;
+  top:1240px;
+  left: 400px;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+
 .col-250 {
   position: relative;
   float: left;
@@ -125,6 +135,11 @@ input[type=submit] {
   color: black;
 }
 
+.LogoutLeft{
+  position: absolute;
+  right:2%;
+
+}
 
 
 
