--- a/client/src/components/booklist/loggedBooklist.css
+++ b/client/src/components/booklist/loggedBooklist.css
@@ -1,7 +1,16 @@
 
 
 
-
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
 
 .LogoutLeft{
     position: absolute;
