--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -24,3 +24,14 @@
 
   color: white;
 }
+
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
