--- a/client/src/components/register/register.css
+++ b/client/src/components/register/register.css
@@ -155,3 +155,13 @@ margin-left: 40%;
 width: 40%;
 
 }
+.topnav .search-container button {
+  float: right;
+  padding: 6px 10px;
+  margin-top: 8px;
+  margin-right: 16px;
+  background: #ddd;
+  font-size: 17px;
+  border: none;
+  cursor: pointer;
+}
